Swagger for Reservation
